--- a/customers/customers.css
+++ b/customers/customers.css
@@ -1,12 +1,10 @@
 main {
-    padding-top: 2.5rem;
+  padding-top: 2.5rem;
 }
 
-
-
 .testimonial {
-    font-size: 1.2rem;
-    /* margin: 3rem 0; */
+  font-size: 1.2rem;
+  /* margin: 3rem 0; */
 }
 
 /* .teastimonial_list {
@@ -14,110 +12,105 @@ main {
     margin: auto;
 } */
 
-.teastimonial:first-of-type {
-    margin-top: 6rem;
+.testimonial:first-of-type {
+  margin-top: 6rem;
 }
-
 
 /* .testimonial_image-container {
    width: 65%;
    max-width: 580px; */
-   /* display: inline-block;
+/* display: inline-block;
    vertical-align: middle; */
-   /* box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.4);
+/* box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.4);
    transform: skew(20deg);
    overflow: hidden;
 } */
 
-.teastimonial_image {
-    width: 100%;
-    vertical-align: top;
-    transform: skew(-20deg) scaleX(1.4);
+.testimonial_image {
+  width: 100%;
+  vertical-align: top;
+  transform: skew(-20deg) scaleX(1.4);
 }
 
-.teastimonial_info {
-    text-align: right;
-    padding: 0.9rem;
-    /* display: inline-block; */
-    /* vertical-align: middle;
+.testimonial_info {
+  text-align: right;
+  padding: 0.9rem;
+  /* display: inline-block; */
+  /* vertical-align: middle;
     width: 30%; */
 }
 
 #customer-2.testimonial {
-    text-align: right;
+  text-align: right;
 }
 
 #customer-2 .testimonial_info {
-    text-align: left;
+  text-align: left;
 }
 
 .testimonial_name {
-    margin: 0.2rem;
-    color: #ff5454;
+  margin: 0.2rem;
+  color: #ff5454;
 }
-
 
 .testimonial_subtitle {
-    margin: 0;
-    font-size: 1.1rem;
-    color: #ccc;
+  margin: 0;
+  font-size: 1.1rem;
+  color: #ccc;
 }
 
-
 .testimonial_subtitle a {
-    color: inherit;
-    text-decoration: none;
+  color: inherit;
+  text-decoration: none;
 }
 
 .testimonial_subtitle a:hover,
 .testimonial_subtitle a:active {
-    color: #7a7a7a;
+  color: #7a7a7a;
 }
 
 .teastimonial_text {
-    margin: 0.2rem;
-    
+  margin: 0.2rem;
 }
 
 @media (min-width: 40rem) {
-    .testimonial {
-        margin: 3rem auto;
-        max-width: 1500px;
-        display: flex;
-        align-items: center;
-        justify-content: space-around;
-    }
+  .testimonial {
+    margin: 3rem auto;
+    max-width: 1500px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
 
-    .testimonial_image-container {
-        /* display: inline-block;
+  .testimonial_image-container {
+    /* display: inline-block;
         vertical-align: middle; */
-        width: 60%;
-        max-width: 40rem;
-        box-shadow: 3px 3px 5px 3px rgba(0,0,0,0.3);
-        transform: skew(20deg);
-        overflow: hidden;
-    }
+    width: 60%;
+    max-width: 40rem;
+    box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
+    transform: skew(20deg);
+    overflow: hidden;
+  }
 
-    .teastimonial_info {
-        /* display: inline-block;
+  .testimonial_info {
+    /* display: inline-block;
         vertical-align: middle; */
-        width: 30%;
-    }
+    width: 30%;
+  }
 }
 
 @keyframes flip-customer {
-    0% {
-        transform: rotateY(0) skew(20deg);
-    }
-    50% {
-        transform: rotateY(160deg) skew(20deg);
-    }
-    100% {
-        transform: rotateY(3) skew(20deg);
-    }
-
+  0% {
+    transform: rotateY(0) skew(20deg);
+  }
+  50% {
+    transform: rotateY(160deg) skew(20deg);
+  }
+  100% {
+    transform: rotateY(3) skew(20deg);
+  }
 }
 
 #customer-1:hover .testimonial_image-container {
-    animation: flip-customer is ease-out forwards;
+  animation: flip-customer is ease-out forwards;
 }
