--- a/customers/customers.css
+++ b/customers/customers.css
@@ -8,8 +8,8 @@ main {
 }
 
 /* .teastimonial_list {
-    width: 80%;
-    margin: auto;
+  width: 80%;
+  margin: auto;
 } */
 
 .testimonial:first-of-type {
@@ -17,13 +17,13 @@ main {
 }
 
 /* .testimonial_image-container {
-   width: 65%;
-   max-width: 580px; */
+ width: 65%;
+ max-width: 580px; */
 /* display: inline-block;
-   vertical-align: middle; */
+ vertical-align: middle; */
 /* box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.4);
-   transform: skew(20deg);
-   overflow: hidden;
+ transform: skew(20deg);
+ overflow: hidden;
 } */
 
 .testimonial_image {
@@ -37,7 +37,7 @@ main {
   padding: 0.9rem;
   /* display: inline-block; */
   /* vertical-align: middle;
-    width: 30%; */
+  width: 30%; */
 }
 
 #customer-2.testimonial {
@@ -69,7 +69,7 @@ main {
   color: #7a7a7a;
 }
 
-.teastimonial_text {
+.testimonial_text {
   margin: 0.2rem;
 }
 
@@ -84,7 +84,7 @@ main {
 
   .testimonial_image-container {
     /* display: inline-block;
-        vertical-align: middle; */
+      vertical-align: middle; */
     width: 60%;
     max-width: 40rem;
     box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
@@ -94,7 +94,7 @@ main {
 
   .testimonial_info {
     /* display: inline-block;
-        vertical-align: middle; */
+      vertical-align: middle; */
     width: 30%;
   }
 }
