--- a/customers/customers.css
+++ b/customers/customers.css
@@ -90,6 +90,7 @@ main {
     box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
     transform: skew(20deg);
     overflow: hidden;
+    transform: matrix(#7a7a7a);
   }
 
   .testimonial_info {
