--- a/shared.css
+++ b/shared.css
@@ -1,32 +1,28 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:100,400,900');
-@import url('https://fonts.googleapis.com/css?family=Anton');
+@import url("https://fonts.googleapis.com/css?family=Roboto:100,400,900");
+@import url("https://fonts.googleapis.com/css?family=Anton");
 /* @import url('https//fonts.googleapis.com/css?family=Montserrat:400,700'); */
 
 :root {
-    --dark-green: #0e4f1f;
-    --highlight-color: #ff1b68;
+  --dark-green: #0e4f1f;
+  --highlight-color: #ff1b68;
 }
 
-
-
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 75%;
+  font-size: 75%;
 }
 
-
 body {
-    font-family: 'Montserrat', sans-serif;
-    margin: 0;
-    /* padding: 3.5rem; */
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  /* padding: 3.5rem; */
 }
 
 @supports (display: grid) {
- body {
-
+  body {
     /* font-family: 'Montserrat', sans-serif;
     margin: 0; */
     height: 100%;
@@ -35,145 +31,141 @@ body {
     grid-template-areas: "header"
                           "main"
                           "footer"; */
-     padding-top: 0;                     
- }
+    padding-top: 0;
+  }
 }
 
-
-   .backdrop { 
-    position: fixed; 
-    display: none;  
-    opacity: 0;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0,0,0,0.5); 
-    transition: opacity 0.2s linear;
- }   
+.backdrop {
+  position: fixed;
+  display: none;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  transition: opacity 0.2s linear;
+}
 
 .main-footer {
-    background: black;
-    padding: 32px;
-    margin-top: 48px;
+  background: black;
+  padding: 32px;
+  margin-top: 48px;
 }
 
 .main-footer_links {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  text-align: center;
 }
 
 .main-footer_link {
-    display: inline-block;
-    margin: 0 16px;
+  display: inline-block;
+  margin: 0 16px;
 }
 
 .main-footer_link a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .main-footer_link a:hover,
 .main-footer_link a:active {
-    color: #ccc;
+  color: #ccc;
 }
 
 .main-header {
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: #2ddf5c;
-    padding: 0.5rem 1rem;
-    z-index: 60;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #2ddf5c;
+  padding: 0.5rem 1rem;
+  z-index: 60;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .main-header > div {
-    display: inline-block;
-    vertical-align: middle;
+  display: inline-block;
+  vertical-align: middle;
 }
 
 .main-header_brand {
-    color: #0e4f1f;
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 22px;
-    height: 22px;
-    /* width: 20px; */
-    display: inline-block;
-    vertical-align: middle;
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+  height: 22px;
+  /* width: 20px; */
+  display: inline-block;
+  vertical-align: middle;
 }
 .button {
-    background: #0e4f1f;
-    color: white;
-    font: inherit;
-    border: 1.5px solid #0e4f1f;
-    padding: 8px;
-    border-radius: 8px;
-    font-weight: bold;
-    cursor: pointer;
+  background: #0e4f1f;
+  color: white;
+  font: inherit;
+  border: 1.5px solid #0e4f1f;
+  padding: 8px;
+  border-radius: 8px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .button:hover,
 .button:active {
-    background: white;
-    color: #0e4f1f;
+  background: white;
+  color: #0e4f1f;
 }
 
-
 .button:focus {
-    outline: none;
+  outline: none;
 }
 
 .section-title {
-    color: #2ddf5c;
-    text-align: center;
-    
+  color: #2ddf5c;
+  text-align: center;
 }
 
 #product-overview h1 {
-    color: white;
-    font-family: 'Anton', sans-serif;
-} 
-
-h1 {
-    font-family: sans-serif;
+  color: white;
+  font-family: "Anton", sans-serif;
 }
 
+h1 {
+  font-family: sans-serif;
+}
 
 .main-nav {
-    display: inline-block;
-    text-align: right;
-    width: calc(100%-122px);
-    vertical-align: middle;
+  display: inline-block;
+  text-align: right;
+  width: calc(100%-122px);
+  vertical-align: middle;
 }
 
 .main-nav_items {
-    padding: 0;
-    margin-left: 750px;
-    list-style: none;
+  padding: 0;
+  margin-left: 750px;
+  list-style: none;
 }
 
 .main-nav_item {
-    display: inline-block;
-    margin: 0 16px;
+  display: inline-block;
+  margin: 0 16px;
 }
 
 .main-nav_item a,
 .mobile-nav_item a {
-    text-decoration: none;
-    color: #0e4f1f;
-    font-weight: bold;
-    padding: 3px 0;
+  text-decoration: none;
+  color: #0e4f1f;
+  font-weight: bold;
+  padding: 3px 0;
 }
 
 /* .main-nav_item a::after{
@@ -183,8 +175,8 @@ h1 {
 
 .main-nav_item a:hover,
 .main-nav_item a:active {
-    color: white;
-    border-bottom: 5px solid white;
+  color: white;
+  border-bottom: 5px solid white;
 }
 
 /* .main-nav_item a:active {
@@ -196,113 +188,107 @@ h1 {
     font-size: 20px;
 } */
 
-
 .main-nav_item--cta {
-    animation: wiggle 400ms 3s 8 ease-out none;
+  animation: wiggle 400ms 3s 8 ease-out none;
 }
 
 .main-nav_item--cta a,
- .mobile-nav_item--cta a {
-    color: white;
-    background: #ff1b68;
-    padding: 8px 16px;
-    border-radius: 8px;
+.mobile-nav_item--cta a {
+  color: white;
+  background: #ff1b68;
+  padding: 8px 16px;
+  border-radius: 8px;
 }
 
 .main-nav_item--cta a:hover,
 .main-nav_item--cta a:active,
 .mobile-nav_item--cta a:hover,
 .mobile-nav_item--cta a:active {
-    color: #ff1b68;
-    background: white;
-    border: none;
+  color: #ff1b68;
+  background: white;
+  border: none;
 }
 
 .main-header_brand img {
-    height: 100%;
-    /* width: 100%; */
+  height: 100%;
+  /* width: 100%; */
 }
 
 .mobile-nav {
-    display: none;
-    position: fixed;
-    z-index: 101;
-    top: 0;
-    left: 0;
-    background: white;
-    width: 80%;
-    height: 100vh;
+  display: none;
+  position: fixed;
+  z-index: 101;
+  top: 0;
+  left: 0;
+  background: white;
+  width: 80%;
+  height: 100vh;
 }
 
-
 .mobile-nav_items {
-    width: 90%;
-    height: 100%;
-    list-style: none;
-    margin: 10% auto;
-    padding: 0;
-    text-align: center;
+  width: 90%;
+  height: 100%;
+  list-style: none;
+  margin: 10% auto;
+  padding: 0;
+  text-align: center;
 }
 
 .mobile-nav_item {
-    margin: 1rem 0;
+  margin: 1rem 0;
 }
 
-
 .mobile-nav_item a {
-    font-size: 1.5rem;
+  font-size: 1.5rem;
 }
 
 .toggle-button {
-    width: 3rem;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    padding-top: 0;
-    padding-bottom: 0;
-    vertical-align: middle;
+  width: 3rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding-top: 0;
+  padding-bottom: 0;
+  vertical-align: middle;
 }
 
 .toggle-button:focus {
-    outline: none;
+  outline: none;
 }
 
 .toggle-button_bar {
-    width: 100%;
-    height: 0.2rem;
-    background: black;
-    display: block;
-    margin: 0.6rem 0;
+  width: 100%;
+  height: 0.2rem;
+  background: black;
+  display: block;
+  margin: 0.6rem 0;
 }
 
 .open {
-    display: block !important;
-    opacity: 1 !important;
-    transform: translateY(0) !important;
+  display: block !important;
+  opacity: 1 !important;
+  transform: translateY(0) !important;
 }
 
 @media (min-width: 40rem) {
-    .main-footer_link {
-        margin: 0 1rem;
-    }
+  .main-footer_link {
+    margin: 0 1rem;
+  }
 
-    .main
-   .main-footer_links {
-      flex-direction: row;
-      justify-content: center;
-    }
+  .main-footer_links {
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 
 @keyframes wiggle {
-    0% {
-        transform: rotateZ(0);
-    }
-    50% {
-        transform: rotateZ(-10deg);
-    }
-    100% {
-        transform: rotateZ(10deg);
-    }
+  0% {
+    transform: rotateZ(0);
+  }
+  50% {
+    transform: rotateZ(-10deg);
+  }
+  100% {
+    transform: rotateZ(10deg);
+  }
 }
-
-
