--- a/main.css
+++ b/main.css
@@ -10,10 +10,10 @@ body {
 #product-overview {
   background: linear-gradient(to top, rgba(80, 68, 18, 0.6) 10%, transparent),
     url("images/freedom.jpg") center/cover no-repeat border-box, #ff1b68;
-  /* background-image: url("freedom.jpg"); */
-  /* background-color: red; */
-  /* background-size: cover;
-    background-position: left 10% bottom 20%; */
+  /* background-image: url("freedom.jpg");  */
+  /* background-color: red;
+   background-size: cover;
+    background-position: left 10% bottom 20%; 
   /* background-repeat: no-repeat;
     background-origin: border-box;
     background-clip: border-box; */
@@ -21,7 +21,7 @@ body {
   /* background-image: linear-gradient(180deg ,red 70%,blue 60%,rgba(0,0,0,0.5)); */
   /* background-image: radial-gradient(ellipse farthest-corner at 20% 50%,red,blue 70%,green); */
   width: 100vw;
-  height: 33vh;
+  height: 40vh;
   /* padding: 10px; */
   margin-top: 3.75rem;
   /* border: 5px dashed red; */
@@ -50,6 +50,7 @@ body {
   padding: 8px;
   box-shadow: 2px 2px 2px 2px rgb(0, 0, 0, 0.5);
   border-radius: 8px;
+  width:calc(100% - 15px);
 }
 
 .plan_title {
