--- a/customers/customers.css
+++ b/customers/customers.css
@@ -5,6 +5,8 @@ main {
 .testimonial {
   font-size: 1.2rem;
   /* margin: 3rem 0; */
+  padding: 0 10px;
+  display: inline;
 }
 
 /* .testimonial_list {
@@ -16,15 +18,15 @@ main {
   margin-top: 6rem;
 }
 
-/* .testimonial_image-container {
- width: 65%;
- max-width: 580px; */
-/* display: inline-block;
- vertical-align: middle; */
-/* box-shadow: 3px 3px 3px 3px rgba(0,0,0,0.4);
- transform: skew(20deg);
- overflow: hidden;
-} */
+.testimonial_image-container {
+  width: 100%;
+  max-width: 40rem;
+  display: inline-block;
+  vertical-align: middle;
+  box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.4);
+  transform: skew(20deg);
+  overflow: hidden;
+}
 
 .testimonial_image {
   width: 100%;
@@ -51,6 +53,7 @@ main {
 .testimonial_name {
   margin: 0.2rem;
   color: #ff5454;
+  font-size: 2rem;
 }
 
 .testimonial_subtitle {
@@ -71,22 +74,25 @@ main {
 
 .testimonial_text {
   margin: 0.2rem;
+  white-space: pre-line;
 }
 
 @media (min-width: 40rem) {
   .testimonial {
     margin: 3rem auto;
     max-width: 1500px;
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-around; */
   }
 
   .testimonial_image-container {
     /* display: inline-block;
       vertical-align: middle; */
-    width: 60%;
+    width: 66%;
     max-width: 40rem;
+    display: inline-block;
+    vertical-align: middle;
     box-shadow: 3px 3px 5px 3px rgba(0, 0, 0, 0.3);
     transform: skew(20deg);
     overflow: hidden;
@@ -96,6 +102,9 @@ main {
     /* display: inline-block;
       vertical-align: middle; */
     width: 30%;
+    text-align: right;
+    display: inline-block;
+    vertical-align: middle;
   }
 }
 
