--- a/main.css
+++ b/main.css
@@ -50,7 +50,7 @@ body {
   padding: 8px;
   box-shadow: 2px 2px 2px 2px rgb(0, 0, 0, 0.5);
   border-radius: 8px;
-  width:calc(100% - 15px);
+  width: calc(100% - 15px);
 }
 
 .plan_title {
@@ -110,9 +110,18 @@ body {
 }
 
 .Key-feature {
-  display: inline-block;
-  width: 30%;
-  vertical-align: top;
+  display: block;
+  width: 20%;
+  margin-left: 120px;
+  /* vertical-align: top; */
+}
+
+@media (min-width: 40rem) {
+  .Key-feature {
+    display: inline-block;
+    width: 30%;
+    margin-left: -40px;
+  } /* vertical-align: top;  */
 }
 
 .Key-feature_image {
